--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,4 +20,5 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONARCLOUD_TOKEN}}
