--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.organizatio=invisal
+sonar.organization=invisal
 sonar.projectKey=invisal_libsql-studio
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
