chords: ignore some code from coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.organization=invisal
 sonar.projectKey=invisal_libsql-studio
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.tsx
