--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.organization=invisal
 sonar.projectKey=invisal_libsql-studio
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.tsx
+sonar.sources=src/
