--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "dbgate-query-splitter": "^4.9.3",
+    "eslint-plugin-jest": "^27.6.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
@@ -52,6 +53,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
