--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@codemirror/lang-sql": "^6.5.5",
+    "@lezer/common": "^1.2.1",
+    "@lezer/lr": "^1.4.0",
     "@libsql/hrana-client": "^0.5.5",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -35,6 +37,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "dbgate-query-splitter": "^4.9.3",
+    "eslint-plugin-jest": "^27.6.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
@@ -50,6 +53,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
