feat: run current and run all

--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "dbgate-query-splitter": "^4.9.3",
     "eslint-plugin-jest": "^27.6.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^1.0.9",
+    "sql-query-identifier": "^2.6.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
