--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "deep-equal": "^2.2.3",
     "eslint-plugin-jest": "^27.6.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
+    "@types/deep-equal": "^1.0.4",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
