--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
     "@libsql/hrana-client": "^0.5.5",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -36,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "deep-equal": "^2.2.3",
     "eslint-plugin-jest": "^27.6.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
@@ -49,6 +54,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
+    "@types/deep-equal": "^1.0.4",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
