ignore some sonarqube rule

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.projectKey=invisal_libsql-studio
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.tsx
 sonar.sources=src/
+
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S6848
