--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.tsx
 sonar.sources=src/
 
+sonar.issue.ignore.multicriteria=e1
 sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S6848
