ignore sonar rule

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,4 @@ sonar.sources=src/
 
 sonar.issue.ignore.multicriteria=e1
 sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S6848
+sonar.issue.ignore.multicriteria.e1.resourceKey=*.tsx
