--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run db:migrate && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:migrate": "tsx src/db/migrate.ts"
+  },
+  "overrides": {
+    "@libsql/client": "^0.5.3"
   },
   "dependencies": {
     "@codemirror/lang-sql": "^6.5.5",
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
+    "@libsql/client": "^0.5.3",
     "@libsql/hrana-client": "^0.5.5",
+    "@lucia-auth/adapter-sqlite": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -35,21 +43,28 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@silevis/reactgrid": "^4.1.3",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
+    "arctic": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "deep-equal": "^2.2.3",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
+    "lucia": "^3.1.1",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "oslo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^1.0.9",
     "sql-query-identifier": "^2.6.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.1",
@@ -62,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
@@ -69,6 +85,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "^5"
   }
 }
