--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run db:migrate && next build",
     "start": "next start",
     "lint": "next lint",
+    "tsc": "tsc --noEmit --skipLibCheck",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
