--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
+    "@blocknote/core": "^0.12.1",
+    "@blocknote/react": "^0.12.2",
     "@codemirror/lang-sql": "^6.5.5",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -51,6 +53,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@silevis/reactgrid": "^4.1.3",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@uiw/codemirror-extensions-langs": "^4.21.24",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "arctic": "^1.2.1",
