--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "cookies-next": "^4.1.1",
     "deep-equal": "^2.2.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
