--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-jest": "^27.6.3",
     "lucia": "^3.1.1",
     "lucide-react": "^0.309.0",
+    "magic-bytes.js": "^1.10.0",
     "next": "14.0.4",
     "oslo": "^1.1.3",
     "react": "^18",
