fix(gui): error bundle and styling
- bundle for browser to access webcrypto
- add config to bundle css module
- use the bundled css in client page

--- a/gui/package.json
+++ b/gui/package.json
@@ -7,7 +7,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
-    }
+    },
+    "./css": "./dist/index.css"
   },
   "scripts": {
     "dev": "tsup --watch",
