--- a/studio/package.json
+++ b/studio/package.json
@@ -34,9 +34,9 @@
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
     "@libsql/client": "^0.5.3",
-    "@libsqlstudio/ui": "*",
-    "@libsqlstudio/gui": "*",
-    "@libsqlstudio/utils": "*",
+    "@libsqlstudio/ui": "workspace:*",
+    "@libsqlstudio/gui": "workspace:*",
+    "@libsqlstudio/utils": "workspace:*",
     "@lucia-auth/adapter-sqlite": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
