--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+**/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -10,13 +11,16 @@
 /coverage
 
 # next.js
+**/.next
 /.next/
 /out/
 
 # production
 /build
+**/dist
 
 # misc
+**/.DS_Store
 .DS_Store
 *.pem
 
@@ -33,8 +37,10 @@ yarn-error.log*
 .vercel
 
 # turbo
+**/.turbo
 .turbo
 
 # typescript
+**/*.tsbuildinfo
 *.tsbuildinfo
 next-env.d.ts
