--- a/gui/package.json
+++ b/gui/package.json
@@ -20,18 +20,69 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write ."
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "dependencies": {
+    "@blocknote/core": "^0.12.1",
+    "@blocknote/react": "^0.12.2",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/lang-sql": "^6.5.5",
+    "@codemirror/view": "^6.26.3",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@justmiracle/result": "^1.2.0",
+    "@lezer/common": "^1.2.1",
+    "@lezer/highlight": "^1.2.0",
+    "@lezer/lr": "^1.4.0",
+    "@libsql/client": "^0.5.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tiptap/core": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
+    "@uiw/codemirror-extensions-langs": "^4.21.24",
+    "@uiw/codemirror-themes": "^4.21.21",
+    "@uiw/react-codemirror": "^4.21.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
+    "cookies-next": "^4.1.1",
+    "deep-equal": "^2.2.3",
+    "lucide-react": "^0.309.0",
+    "react-resizable-panels": "^1.0.9",
+    "sonner": "^1.4.41",
+    "sql-query-identifier": "^2.6.0",
+    "tailwind-merge": "^2.2.2"
+  },
   "devDependencies": {
-    "@libsqlstudio/tailwind": "*",
-    "@libsqlstudio/tsconfig": "*",
+    "@libsqlstudio/tailwind": "workspace:*",
+    "@libsqlstudio/tsconfig": "workspace:*",
+    "eslint-config-libsqlstudio": "workspace:*",
+    "@types/deep-equal": "^1.0.4",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint-config-libsqlstudio": "*",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "tsup": "^8.0.2",
