--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*", "../gui/src/*"]
+      "@studio/*": ["./src/*"]
     }
   },
   "include": [
