refactor(gui): change absolute path to `@gui/...`

--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -4,7 +4,7 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@gui/*": ["./src/*"]
     },
     "noImplicitReturns": false
   },
