--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -23,26 +23,6 @@
       "@studio/*": ["./src/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "../gui/src/drivers/sqlite-base-driver.ts",
-    "../gui/src/sqlite/sql-parse-table.test.ts",
-    "../gui/src/sqlite/sql-parse-table.ts",
-    "../gui/src/sqlite/sql-parse-trigger.test.ts",
-    "../gui/src/sqlite/sql-parse-trigger.ts",
-    "../gui/src/libs/validation.test.ts",
-    "../gui/src/components/connection-dialog.tsx",
-    "../gui/window.d.ts",
-    "../gui/src/libs/json-safe.ts",
-    "../gui/src/contexts/AutoCompleteProvider.tsx",
-    "../gui/src/contexts/block-editor-provider.tsx",
-    "../gui/src/hooks/useElementResize.ts",
-    "../gui/src/hooks/useMessageListener.ts",
-    "../gui/src/messages/openContextMenu.tsx",
-    "../gui/src/libs/export-helper.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
