--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format:fix": "turbo run format:fix",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
-    "staged": "turbo run staged"
+    "staged": "turbo run staged --cache-dir=.turbo"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.9",
