--- a/gui/package.json
+++ b/gui/package.json
@@ -14,7 +14,10 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
+    "staged": "pnpm run typecheck && pnpm run format && pnpm run lint && pnpm run test",
     "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check .",
@@ -76,15 +79,18 @@
   "devDependencies": {
     "@libsqlstudio/tailwind": "workspace:*",
     "@libsqlstudio/tsconfig": "workspace:*",
-    "eslint-config-libsqlstudio": "workspace:*",
     "@types/deep-equal": "^1.0.4",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "eslint-config-libsqlstudio": "workspace:*",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
