--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -8,6 +8,13 @@
     },
     "noImplicitReturns": false
   },
-  "include": ["**/*.ts", "**/*.tsx", ".eslintrc.cjs", "*.js", "*.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".eslintrc.cjs",
+    "*.js",
+    "*.ts",
+    "jest.config.cjs"
+  ],
   "exclude": ["node_modules", "dist"]
 }
