--- a/studio/package.json
+++ b/studio/package.json
@@ -23,6 +23,7 @@
   "overrides": {
     "@libsql/client": "^0.5.3"
   },
+  "packageManager": "pnpm@8.15.7",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
     "@blocknote/core": "^0.12.1",
