--- a/studio/package.json
+++ b/studio/package.json
@@ -59,6 +59,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@silevis/reactgrid": "^4.1.3",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@tiptap/core": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
     "@uiw/codemirror-extensions-langs": "^4.21.24",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
