--- a/gui/package.json
+++ b/gui/package.json
@@ -16,6 +16,9 @@
     },
     "./css": "./dist/index.css"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
