--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -14,7 +14,8 @@
     ".eslintrc.cjs",
     "*.js",
     "*.ts",
-    "jest.config.cjs"
-, "../studio/src/components/file-upload.ts"  ],
+    "jest.config.cjs",
+    "../studio/src/components/file-upload.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
