--- a/gui/package.json
+++ b/gui/package.json
@@ -36,8 +36,11 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.16.0",
     "@codemirror/commands": "^6.3.3",
     "@codemirror/lang-sql": "^6.5.5",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.26.3",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
