--- a/studio/package.json
+++ b/studio/package.json
@@ -73,6 +73,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
+    "libsql-stateless-easy": "^1.5.8",
     "lucia": "^3.1.1",
     "lucide-react": "^0.309.0",
     "magic-bytes.js": "^1.10.0",
