--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint": "next lint",
-    "lint:fix": "next lint --fix ."
+    "lint:fix": "next lint --fix .",
+    "dialect": "node build-dialect.js"
   },
   "packageManager": "pnpm@8.15.7",
   "overrides": {
@@ -96,6 +97,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/showdown": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
@@ -107,6 +109,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "showdown": "^2.1.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
