feat: add mdx support

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.1",
   "private": false,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "dev-https": "next dev --experimental-https",
     "build": "next build",
     "build-with-migrate": "npm run db:migrate && next build",
@@ -39,6 +39,9 @@
     "@lezer/lr": "^1.4.0",
     "@libsql/client": "^0.5.3",
     "@lucia-auth/adapter-sqlite": "^3.0.1",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -63,6 +66,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tiptap/core": "^2.3.0",
     "@tiptap/react": "^2.3.0",
+    "@types/mdx": "^2.0.13",
     "@uiw/codemirror-extensions-langs": "^4.21.24",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
