--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
+    "file-saver": "^2.0.5",
     "libsql-stateless-easy": "^1.6.11",
     "lucia": "^3.1.1",
     "lucide-react": "^0.309.0",
@@ -99,6 +100,7 @@
     "@testing-library/jest-dom": "^6.2.1",
     "@testing-library/react": "^14.1.2",
     "@types/deep-equal": "^1.0.4",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
