--- a/.github/workflows/coverags.yaml
+++ b/.github/workflows/coverags.yaml
@@ -6,6 +6,10 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
