--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@justmiracle/result": "^1.2.0",
+    "@lexical/markdown": "^0.16.1",
+    "@lexical/react": "^0.16.1",
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
     "@libsql/client": "^0.5.3",
@@ -81,6 +83,7 @@
     "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
     "file-saver": "^2.0.5",
+    "lexical": "^0.16.1",
     "libsql-stateless-easy": "^1.6.11",
     "lucia": "^3.2.0",
     "lucide-react": "^0.309.0",
