--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
     "@aws-sdk/client-s3": "^3.540.0",
     "@blocknote/core": "^0.12.1",
     "@blocknote/react": "^0.12.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-sql": "^6.5.5",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@justmiracle/result": "^1.2.0",
-    "@lexical/markdown": "^0.16.1",
-    "@lexical/react": "^0.16.1",
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
     "@libsql/client": "^0.5.3",
@@ -63,6 +62,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@replit/codemirror-indentation-markers": "^6.5.3",
     "@silevis/reactgrid": "^4.1.3",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tiptap/core": "^2.3.0",
@@ -83,7 +83,6 @@
     "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
     "file-saver": "^2.0.5",
-    "lexical": "^0.16.1",
     "libsql-stateless-easy": "^1.6.11",
     "lucia": "^3.2.0",
     "lucide-react": "^0.309.0",
