--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^1.0.9",
     "sonner": "^1.4.41",
+    "sql-formatter": "^15.3.2",
     "sql-query-identifier": "^2.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
