--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "drizzle-orm": "^0.30.1",
     "eslint-plugin-jest": "^27.6.3",
     "file-saver": "^2.0.5",
+    "immer": "^10.1.1",
     "libsql-stateless-easy": "^1.6.11",
+    "lodash": "^4.17.21",
     "lucia": "^3.2.0",
     "lucide-react": "^0.309.0",
     "magic-bytes.js": "^1.10.0",
@@ -106,6 +108,7 @@
     "@types/deep-equal": "^1.0.4",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.17.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
