--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "showdown": "^2.1.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.1.0",
     "tsx": "^4.7.1",
     "typescript": "^5"
   }
