--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "sql-formatter": "^15.3.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-immer": "^0.11.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
