--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "oslo": "^1.1.3",
     "react": "^18.2.01",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "react-resizable-panels": "^1.0.9",
     "sonner": "^1.4.41",
     "sql-formatter": "^15.3.2",
