--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "shiki": "^1.12.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.4.3",
