--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@replit/codemirror-indentation-markers": "^6.5.3",
-    "@silevis/reactgrid": "^4.1.3",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tiptap/core": "^2.3.0",
     "@tiptap/react": "^2.3.0",
@@ -77,7 +76,7 @@
     "arctic": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.0",
+    "cmdk": "^1.0.4",
     "cookies-next": "^4.3.0",
     "deep-equal": "^2.2.3",
     "dexie": "^4.0.8",
@@ -90,12 +89,12 @@
     "libsql-stateless-easy": "^1.6.11",
     "lodash": "^4.17.21",
     "lucia": "^3.2.0",
-    "lucide-react": "^0.309.0",
+    "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "oslo": "^1.1.3",
-    "react": "^18.2.01",
-    "react-dom": "^18.2.0",
-    "react-resizable-panels": "^1.0.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-resizable-panels": "^2.1.7",
     "sonner": "^1.4.41",
     "sql-formatter": "^15.3.2",
     "tailwind-merge": "^2.2.2",
@@ -106,8 +105,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
-    "@testing-library/jest-dom": "^6.2.1",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/deep-equal": "^1.0.4",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
