--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@tiptap/core": "^2.3.0",
     "@tiptap/react": "^2.3.0",
     "@types/mdx": "^2.0.13",
+    "@types/react-grid-layout": "^1.3.5",
     "@uiw/codemirror-extensions-langs": "^4.21.24",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
@@ -94,6 +95,7 @@
     "oslo": "^1.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-grid-layout": "^1.5.0",
     "react-resizable-panels": "^2.1.7",
     "sonner": "^1.4.41",
     "sql-formatter": "^15.3.2",
