--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "oslo": "^1.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
