--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "next-themes": "^0.4.4",
     "oslo": "^1.1.3",
     "react": "19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0",
     "react-grid-layout": "^1.5.0",
     "react-resizable-panels": "^2.1.7",
@@ -119,6 +120,7 @@
     "@types/lodash": "^4.17.9",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "@types/showdown": "^2.0.6",
     "@types/sql.js": "^1.4.9",
