--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "lodash": "^4.17.21",
     "lucia": "^3.2.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.3",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "oslo": "^1.1.3",
