--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dev": "next dev -p 3008",
     "dev-https": "next dev --experimental-https",
     "build": "next build",
-    "build-with-migrate": "npm run db:migrate && next build",
     "start": "next start",
     "tsc": "tsc --noEmit --skipLibCheck",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:migrate": "tsx src/db/migrate.ts",
     "generate-random-key": "tsx src/cli/generate-aes-key.ts",
     "staged": "npm run typecheck && npm run lint && jest",
     "typecheck": "tsc --noEmit --skipLibCheck",
@@ -21,8 +18,7 @@
     "format:fix": "prettier --write .",
     "lint": "next lint",
     "lint:fix": "next lint --fix .",
-    "dialect": "node build-dialect.js",
-    "remove-branch": "npx git-removed-branches --prune -f"
+    "dialect": "node build-dialect.js"
   },
   "overrides": {
     "@libsql/client": "^0.5.3"
@@ -35,7 +31,6 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@justmiracle/result": "^1.2.0",
     "@lezer/common": "^1.2.1",
     "@lezer/lr": "^1.4.0",
     "@libsql/client": "^0.5.3",
@@ -68,8 +63,6 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tiptap/core": "^2.3.0",
-    "@tiptap/react": "^2.3.0",
     "@types/mdx": "^2.0.13",
     "@types/react-grid-layout": "^1.3.5",
     "@uiw/codemirror-extensions-langs": "^4.21.24",
@@ -81,7 +74,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.4",
-    "cookies-next": "^4.3.0",
     "deep-equal": "^2.2.3",
     "dexie": "^4.0.8",
     "dotenv": "^16.4.5",
