--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,10 @@
     "directory": ".open-next/assets",
     "binding": "ASSETS"
   },
+  "observability": {
+    "enabled": true,
+    "head_sampling_rate": 1
+  },
   "kv_namespaces": [
     {
       "binding": "NEXT_CACHE_WORKERS_KV",
